<resources>
    <string name="app_name" translatable="false">Clean</string>
    <string name="tvPersonalData">Personal data</string>
    <string name="etFullName">full name</string>
    <string name="etCPF">CPF (e.g.: 123.456.789-10)</string>
    <string name="etPhone">phone (e.g.: (11) 12345-6789)</string>
    <string name="tvAddress">Address :</string>
    <string name="etZipCodeHint">Zip code (e.g.: 01234-567)</string>
    <string name="etStreetAddressHint">street address</string>
    <string name="etNumberHint">number</string>
    <string name="etAddressCoplementHint">complement</string>
    <string name="etNeighborhood">neighborhood</string>
    <string name="etCityHint">city</string>
    <string name="tvAccessMyAccount">Access my account</string>
    <string name="etPassword">Password</string>
    <string name="btEnter">Enter</string>
    <string name="tvForgotPassword">Forgot password?</string>
    <string name="tvFirstTimeHere">First time here?</string>
    <string name="btSignupClient">Yes and I am looking for a cleaner</string>
    <string name="btSignupCleaner">Yes and I am a cleaner</string>
    <string name="tvLogin">Login</string>
    <string name="etEmail">e-mail</string>
    <string name="etPasswordHint">password</string>
    <string name="etConfirmPasswordHint">confirm password</string>
    <string name="btnSendSignUp">Send</string>
    <string name="cpfRequiredMsg">CPF required</string>
    <string name="zipCodeRequiredMsg">Zip Code required</string>
    <string name="emailInvalidMsg">Invalid email</string>
    <string name="emailRequiredMsg">Email required</string>
    <string name="passwordRequiredMsg">Password required</string>
    <string name="passwordNotMatchMsg">Passwords not match</string>
    <string name="nameRequiredMsg">Required name</string>
    <string name="streetRequiredMsg">Street required</string>
    <string name="numberRequiredMsg">Number required</string>
    <string name="etNeighborhoodRequired">Neighborhood required</string>
    <string name="cityRequiredMsg">City required</string>
    <string name="btSearchDiarist">Search diarist?</string>
    <string name="btMySchedules">My schedules</string>
    <string name="btClose">Close</string>
    <string name="btViewMap">View map</string>
    <string name="btAbout">About</string>
    <string name="emailPasswordRequired">E-mail and password are required.</string>
    <string name="emailRequired">E-mail is required.</string>
    <string name="btResetPassword">Reset password</string>
    <string name="resetEmailSent">Reset e-mail sent.</string>
    <string name="errorTryAgain">Error. Try again.</string>
    <string name="invalidEmail">Invalid e-mail.</string>
    <string name="etHourValueHint">Value per hour</string>
    <string name="etZipCodeInvalidMsg">Invalid Zip Code</string>
    <string name="etCPFInvalidMsg">Invalid CPF</string>
    <string name="logoClean">Logo Clean</string>
    <string name="developed">developed by clean.com</string>
    <string name="errorCreatingUserMsg">Error creating user!</string>
    <string name="tvProfessional_info">Professional\'s Info</string>
    <string name="tvNameLbl">Name :</string>
    <string name="tvPhoneLbl">Phone :</string>
    <string name="hour_value">Hour value :</string>
    <string name="crash_me">Crash me!</string>
    <string name="tvCleaningDate">Cleaning date :</string>
    <string name="btnSchedule">Schedule</string>
    <string name="tvCleaningTime">Cleaning time :</string>
    <string name="cleaningServiceScheduledMsg">Cleaning service scheduled!</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnUpdateService">Update</string>
    <string name="btnCancel">Cancel</string>
    <string name="tvProfessionalInfo">Professional\'s Info</string>
    <string name="tvServiceInfo">Service\'s Info</string>
    <string name="tvServiceStatus">Service Status :</string>
    <string name="msgCleaningServUpdated">Cleaning Service Updated!</string>
    <string name="OPENED">OPENED</string>
    <string name="CANCELED">CANCELED</string>
    <string name="DONE">DONE</string>
    <string name="serviceDeletedMsg">Service deleted from the schedule!</string>
</resources>
