<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:alpha="0.9"
            android:layout_width="0dp"
            android:layout_height="120dp" app:srcCompat="@drawable/clean_logo_basico"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            style="@style/custom_button"
            android:text="@string/btMySchedules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSchedules"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btSearch"
            app:layout_constraintBottom_toTopOf="@+id/btClose"
            app:layout_constraintEnd_toEndOf="@+id/btSearch" app:layout_constraintStart_toStartOf="@+id/btSearch"/>
    <Button
            style="@style/custom_button"
            android:text="@string/btClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btClose"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btSchedules"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/btSchedules" app:layout_constraintStart_toStartOf="@+id/btSchedules"/>
    <Button
            style="@style/custom_button"
            android:text="@string/btSearchDiarist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSearch"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/btSchedules" app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:gravity="center"
        android:textColor="#673AB7"
            android:text="Desenvolvido por Clean.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="197dp" />
</androidx.constraintlayout.widget.ConstraintLayout>